--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -36,7 +36,7 @@ layout: default
               </h1>
 
               <div class="post__content {{ page_type }}">{{ post.content | truncatewords:40 }}</div><br>
-              <div class="post__jump"><a href="{{ post.url }}">LEIA MAIS</a></div>
+              <div class="post__jump"><a href="{{ post.url }}"></a></div>
           </li>
           {% endfor %}
   </ul>
