--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
       <header class="header header--{{ page_type }}">
 
         <nav class="nav">
+          <img id="logo" src="../i/Logo.png">
           <ul class="nav__list nav--{{ page_type }}__list collapsed">
             {% for item in site.nav_menu %}
               {% if item.scheme == 'mailto' %}
