--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,12 @@
     background: #181420;
 }
 
+#logo {
+    position: absolute;
+    width: 185px;
+    top: 10px;
+}
+
 .nav__list {
     float: right;
     margin: 6.3px;
