--- a/style.scss
+++ b/style.scss
@@ -59,6 +59,13 @@
     border-bottom: 0.5rem solid rgb(151, 62, 240);
 }
 
+img.Charm {
+    position: absolute;
+    margin-top: 38px;
+    width: 300px;
+    margin-left: 1.5%;
+}
+
 .post {
     width: 1200px;
     margin: auto;
