--- a/style.scss
+++ b/style.scss
@@ -152,9 +152,9 @@ li.post__entry.home {
 .post__jump a {
     background: #0000;
     position: absolute;
-    width: 510px;
-    height: 350px;
-    margin-top: -350px;
+    width: 566px;
+    height: 40%;
+    margin-top: -31%;
     padding: 1px;
     display: flex;
 }
